# data-structures

./: .gitignore  README.md
C++/: CMakeLists.txt  dsa  main.cpp
C++/lists/: doubly-linked-list.hpp  head-tail-linked-list.hpp  linked-list.hpp  list.cpp  list.hpp  static-linked-list.hpp  static-list.hpp
C/LinkedList/: README.md  main.c
C/LinkedList/lib/: Data.c  Data.h  LinkedList.c  LinkedList.h
C/LinkedList/src/: llist-node.c  llist-node.h  llist.c  llist.h
C/LinkedQueue/: README.md
C/LinkedQueue/lib/: LinkedQueue.c  LinkedQueue.h
C/LinkedStack/: README.md
C/LinkedStack/lib/: LinkedStack.c  LinkedStack.h
C/bs-tree/: BS_TREE  CMakeLists.txt  main.c
C/bs-tree/lib/: bs-tree.c  bs-tree.h  data.c
C/dyn-array/: CMakeLists.txt  DYN_ARRAY  README.md  main.c
C/dyn-array/lib/: data.c  data.h  dyn-array.c  dyn-array.h
C/generic-LinkedList/: Data.c  Data.h  LinkedList.c  LinkedList.h  README.md  main.c
C/generic-LinkedList/lib/: Data.c
C/sbb-tree/: main.c
C/sbb-tree/lib/: sbb-node.c  sbb-node.h  sbb-tree.c  sbb-tree.h
C/sbb-tree/src/: data.c  data.h  sbb-node.c  sbb-node.h  sbb-tree.c  sbb-tree.h
python/stack/: node.py  stack.py
